refactor : winningLotto List<Integer> -> Lotto 객체